# PrivacyGo

./: .clang-format  .gitattributes  .gitignore  .pre-commit-config.yaml  .style.yapf  CMakeLists.txt  CONTRIBUTING.md  LICENSE  NOTICE  README.md
anonpsi/: README.md
anonpsi/src/: actbayesian.py  baseline.py  dynpathblizer.py  dynpathblizer_params.py  improved_baseline.py  sum_only.py  test.py  treesumexplorer.py  utils.py
cmake/: DPCA_PSI_Config.cmake.in  external_gflags.cmake  external_glog.cmake  external_gtest.cmake  external_openssl.cmake
dpca-psi/: CMakeLists.txt  README.md
dpca-psi/cmake/: DPCA_PSIConfig.cmake.in  DPCA_PSICustomMacros.cmake  EnableCXX17.cmake  EnableDebugFlags.cmake  ExternalGlog.cmake  ExternalOpenSSL.cmake
dpca-psi/example/: CMakeLists.txt  README.md  README_internal.md  dpca_psi_example.cpp
dpca-psi/example/data/: receiver_input_file.csv  sender_input_file.csv
dpca-psi/example/json/: receiver_without_djn.json  receiver_without_dp.json  receiver_without_packing.json  sender_without_djn.json  sender_without_packing.json
dpca-psi/example/scripts/: README.md  receiver_test.sh.in  receiver_use_file_data.sh.in  receiver_with_preprocessing.sh.in  receiver_without_dp.sh.in  sender_test.sh.in  sender_use_file_data.sh.in  sender_with_preprocessing.sh.in  sender_without_dp.sh.in
dpca-psi/src/dpca-psi/: CMakeLists.txt  dp_cardinality_psi.cpp  dp_cardinality_psi.h
dpca-psi/src/dpca-psi/common/: CMakeLists.txt  config.h.in  csv_file_io.cpp  csv_file_io.h  defines.h  dummy_data_utils.h  file_io.h  parameter_check.h  utils.h
dpca-psi/src/dpca-psi/crypto/: CMakeLists.txt  aes.cpp  aes.h  dp_sampling.cpp  dp_sampling.h  ecc_cipher.cpp  ecc_cipher.h  ipcl_paillier.cpp  ipcl_paillier.h  ipcl_utils.h  prng.cpp  prng.h  smart_pointer.h
dpca-psi/src/dpca-psi/network/: CMakeLists.txt  io_base.h  two_channel_net_io.cpp  two_channel_net_io.h
dpca-psi/test/: CMakeLists.txt  dp_cardinality_psi_test.cpp
dpca-psi/test/common/: csv_file_io_test.cpp
dpca-psi/test/crypto/: aes_test.cpp  dp_sampling_test.cpp  ecc_cipher_test.cpp  ipcl_paillier_test.cpp  prng_test.cpp
dpca-psi/test/network/: two_channel_net_io_test.cpp
example/: CMakeLists.txt  README.md  dpca_psi_bench.cpp
example/data/: gen_data.py  receiver_input_file.csv  sender_input_file.csv
example/json/: README.md  receiver_with_precomputed_tau.json  receiver_without_djn.json  receiver_without_dp.json  receiver_without_packing.json  sender_with_precomputed_tau.json  sender_without_djn.json  sender_without_dp.json  sender_without_packing.json
example/scripts/: README.md  receiver_test.sh.in  receiver_use_file_data.sh.in  receiver_with_preprocessing.sh.in  receiver_without_dp.sh.in  sender_test.sh.in  sender_use_file_data.sh.in  sender_with_preprocessing.sh.in  sender_without_dp.sh.in
ldp/: README.md  requirements.txt
ldp/src/: gcms.py  gcms_client.py  gcms_server.py  gcms_shuffler.py  gcms_utils.py  unknown_domain.py  unknown_domain_aux_server.py  unknown_domain_client.py  unknown_domain_server.py
mpc-dualdp/: CMakeLists.txt  README.md
mpc-dualdp/cmake/: EnableCXX17.cmake  EnableDebugFlags.cmake  MPC_DualDPConfig.cmake.in  MPC_DualDPCustomMacros.cmake  PPAM.cmake
mpc-dualdp/example/: CMakeLists.txt  mpc_dualdp_example.cpp
mpc-dualdp/src/mpc-dualdp/: CMakeLists.txt  mpc_dualdp.cpp  mpc_dualdp.h
mpc-dualdp/src/mpc-dualdp/utils/: config.h.in
mpc-dualdp/test/: CMakeLists.txt  mpc_dualdp_test.cpp  test_runner.cpp
ppam/: CMakeLists.txt  README.md
ppam/cmake/: DPCA_PSI.cmake  EnableCXX17.cmake  EnableDebugFlags.cmake  ExternalEigen.cmake  ExternalGTest.cmake  ExternalGflags.cmake  ExternalGlog.cmake  ExternalOpenSSL.cmake  PPAMConfig.cmake.in  PPAMCustomMacros.cmake
ppam/example/: CMakeLists.txt  README.md  ppam_example.cpp
ppam/example/json/: README.md  receiver_with_precomputed_tau.json  sender_with_precomputed_tau.json  sender_without_dp.json
ppam/example/scripts/: README.md  receiver_test.sh.in  receiver_with_preprocessing.sh.in  receiver_without_dp.sh.in  sender_test.sh.in  sender_with_preprocessing.sh.in  sender_without_dp.sh.in
ppam/src/ppam/: CMakeLists.txt  ppam.cpp  ppam.h
ppam/src/ppam/mpc/: CMakeLists.txt
ppam/src/ppam/mpc/aby/: CMakeLists.txt  aby_protocol.cpp  aby_protocol.h
ppam/src/ppam/mpc/beaver/: CMakeLists.txt  bool_triplet_generator.h
ppam/src/ppam/mpc/common/: CMakeLists.txt  defines.h  pseudo_rand_generator.h  utils.h
ppam/src/ppam/mpc/ot/: CMakeLists.txt  iknp_ot_ext_receiver.cpp  iknp_ot_ext_receiver.h  iknp_ot_ext_sender.cpp  iknp_ot_ext_sender.h  naor_pinkas_ot_receiver.cpp  naor_pinkas_ot_receiver.h  naor_pinkas_ot_sender.cpp  naor_pinkas_ot_sender.h  oblivious_transfer.cpp  oblivious_transfer.h
ppam/src/ppam/utils/: config.h.in
ppam/test/: CMakeLists.txt  ppam_test.cpp
ppam/test/mpc/aby/: aby_protocol_test.cpp
ppam/test/mpc/beaver/: bool_triplet_generator_test.cpp
ppam/test/mpc/ot/: oblivious_transfer_test.cpp
ppam/test/mpc/utils/: pseudo_rand_generator_test.cpp
src/: CMakeLists.txt
src/dpca-psi/: CMakeLists.txt  dp_cardinality_psi.cpp  dp_cardinality_psi.h  dp_cardinality_psi_test.cpp
src/dpca-psi/common/: CMakeLists.txt  csv_file_io.cpp  csv_file_io.h  csv_file_io_test.cpp  dummy_data_utils.h  file_io.h  parameter_check.h  utils.h
src/dpca-psi/crypto/: CMakeLists.txt  aes.cpp  aes.h  aes_test.cpp  dp_sampling.cpp  dp_sampling.h  dp_sampling_test.cpp  ecc_cipher.cpp  ecc_cipher.h  ecc_cipher_test.cpp  ipcl_paillier.cpp  ipcl_paillier.h  ipcl_paillier_test.cpp  ipcl_utils.h  prng.cpp  prng.h  prng_test.cpp  smart_pointer.h
src/dpca-psi/network/: CMakeLists.txt  io_channel.h  net_io_channel.h
src/testing/: CMakeLists.txt  dpca_psi_gtest_main.cpp
